playbooks/macos/k8s/config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: larambla-deployment
  labels:
    app: larambla-microservices
spec:
  replicas: 3
  selector:
    matchLabels:
      app: larambla-member-api
  template:
    metadata:
      labels:
        app: larambla-member-api
    spec:
      containers:
      - name: larambla
        image: xxxxxxxxxxx.dkr.ecr.ap-northeast-2.amazonaws.com/larambla:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: larambla-service
spec:
  #Creating a service of type load balancer. Load balancer gets created but takes time to reflect
  type: LoadBalancer
  selector:
    app: larambla-member-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
